# Python-Example-Project

./: README.md  pyproject.toml  requirements.txt
my_demo/: R-P-Splay.py  guess-the-numbers.py  madlibs.py  main.py  quiz_game.py  random.py  time-says.py
