[tool.poetry]
name = "my-demo"
version = "0.1.0"
description = ""
authors = ["burak <99646235+Burrakkozan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "my_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
